Archive2/53/ea6975cc2fab36/output
main.cpp:5:12: error: chosen constructor is explicit in copy-initialization
    return {42, 1337};
           ^~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/tuple:537:19: note: constructor declared here
        constexpr tuple(_U1&& __a1, _U2&& __a2)
                  ^
1 error generated.
