Archive2/53/ea6975cc2fab36/main.cpp
#include <tuple>

std::tuple<int, int> foo()
{
    return {42, 1337};
}

int main() { }